--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 body {
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.781), rgba(0,0,0,0.158)),
                       linear-gradient(to top, rgba(0,0,0,0.432), rgba(0,0,0,0.007)),
-                      url(background.jpg);
+                      url(./imagens/background.jpg);
     background-repeat: no-repeat; 
     background-size: cover;              
 }
